# capital1

./: .gitignore  README.md
agents/: .env.dev  config.py  main.py  pyproject.toml  routes.py
agents/curator/services/: curator_service.py
agents/curator/utils/: gather_elements.py  prompts.py  query_router.py  response_formatter.py  safe_url_fetcher.py  task_manager.py
agents/curator/utils/tools/: image_search_tool.py  message_logger.py  news_tool.py  pest_detection.py  pest_detection_tool.py  policy_fetcher.py  price_fetcher.py  pyproject.toml  retrieval_tool.py  search_tool.py  suggestions_logger.py  trip_inputs.py  user_inputs.py  weather_tool.py
agents/curator/utils/tools/retriever/: all_metadata.json  metadata_generator.py  metadata_selector.py
agents/curator/utils/tools/retriever/.metadata-cache/: cache.db
agents/curator/utils/tools/weather/: indian_cities.json
agents/tools/: retrieval-tool.py
agents/tools/utils/: metadatagenerator.py
data/: .env.dev  main.py  pyproject.toml  routes.py  utils.py
data/core/: config.py
indexer/: .env.dev  config.py  indexer.py  pyproject.toml
indexer/utils/: embedding_generator.py  file_parser.py  metadata_generator.py  s3_service.py  vector_store.py
tools/: requirements.txt  weather_tool.py
tools/pest-detection/utils/: data_loaders.py  dataset_utils.py
usecases/crop-prices/: config.py  fetcher.py  main.py  pyproject.toml
usecases/crop-prices/utils/: html_parser.py  url_builder.py
usecases/crop-prices/utils/data/: commodities.json  states.json
usecases/crop_prices/: fetcher.py
usecases/crop_prices/utils/: fuzzy.py
usecases/pest-detection/: app.py  config.py  main.py  model_inference.py  pyproject.toml
usecases/pest-detection/utils/: trainer_utils.py
usecases/policy_fetcher/: .env.example  README.md  app.py  config.py  farmer_details.py  main.py  pyproject.toml
usecases/policy_fetcher/utils/: data_processor.py  farmer_policy_agent.py  openai_client.py  policy_analyser.py  search_tool.py
usecases/soil_information/: .env.template  ai_recommendations.py  config.py  main.py  models.py  run.py  soil_analyzer.py  soil_api.py  utils.py
usecases/soil_information/reports/: soil_report_22.33_87.33_20250825_011211.json  soil_report_22.33_87.33_20250825_011211.txt
weather/: .env  README.md  app.py  config.py  llm_service.py  location_service.py  models.py  requirements.txt  run.py  weather_service.py
weather_tool/: weather_tool_example.py
weather_tool/weather_tool/: pyvenv.cfg
