[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Subarno",email = "subathanatos97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community (>=0.3.27,<0.4.0)"
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
