[project]
name = "data"
version = "0.1.0"
description = ""
authors = [
    {name = "rwik04",email = "rwik04@kgpian.iitkgp.ac.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pymongo (>=4.14.0,<5.0.0)",
    "bson (>=0.5.10,<0.6.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
