[project]
name = "indexer"
version = "0.1.0"
description = ""
authors = [
    {name = "rwik04",email = "rwik04@kgpian.iitkgp.ac.in"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.40.5,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "qdrant-client[fastembed] (>=1.14.2)",
    "langchain (>=0.3.27,<0.4.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
