[project]
name = "crop-prices"
version = "0.1.0"
description = ""
authors = [
    {name = "rwik04",email = "rwik04@kgpian.iitkgp.ac.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.4,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
