[tool.poetry]
name = "farmer-policy-agent"
version = "1.0.0"
description = "AI-powered agent to fetch and analyze government policies and schemes for farmers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "../../agents" },
    { include = "utils" }
]



[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
openai = "^1.3.0"
tavily-python = "^0.3.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.350"
asyncio = "^3.4.3"
aiofiles = "^23.2.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=agents --cov=utils --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"