[project]
name = "pest"
version = "0.1.0"
description = ""
authors = [
    { name = "Avi", email = "avinandansh08@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gradio",
    "langchain",
    "langchain-openai"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
